--- a/notebook/Disinform_CCDH.ipynb
+++ b/notebook/Disinform_CCDH.ipynb
@@ -68,15 +68,15 @@
     "## Indice\n",
     "- [Utils](#utils)\n",
     "- [CCDH and tweets process](#ccdh)\n",
-    "    - [Process CCDH data](#Process_CCDH_data)\n",
-    "    - [CCDH and Total tweets comparison](#comparison)\n",
-    "    - [Total stats](#stats) \n",
-    "    - [Stats disinform](#stats_disinform)\n",
-    "    - [New domain study](#new_domain)\n",
-    "    - [Credibility](#credibility)\n",
-    "    - [Date tweets](#dates)\n",
-    "    - [Network](#network)\n",
-    "    - [Botometer score](#botometer_score)"
+    "- [Process CCDH data](#Process_CCDH_data)\n",
+    "- [New files](#new)\n",
+    "- [Total stats](#stats) \n",
+    "- [Stats disinform](#stats_disinform)\n",
+    "- [New domain study](#new_urls)\n",
+    "- [Credibility](#credibility)\n",
+    "- [Date tweets](#dates)\n",
+    "- [Network](#network)\n",
+    "- [Botometer score](#botometer_score)"
    ]
   },
   {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -174,13 +174,14 @@
        "7     kevdjenkins1     active"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "users_link = glob.glob(\"C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/csv/users_ccdh.csv\")\n",
+    "path = \"C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/csv/\"\n",
+    "users_link = glob.glob(path + \"users_ccdh.csv\")\n",
     "users_disinform = pd.read_csv(users_link[0])\n",
     "users_disinform"
    ]
@@ -217,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -323,13 +324,14 @@
        "[825 rows x 2 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "credibility_url = pd.read_csv(\"C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/csv/domain_credibility.csv\")\n",
+    "path = \"C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/csv/\"\n",
+    "credibility_url = pd.read_csv(path + \"domain_credibility.csv\")\n",
     "credibility_url"
    ]
   },
@@ -351,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -460,22 +462,15 @@
        "11     kevdjenkins1     active"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "disinform = pd.read_csv(\"C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/csv/disinformation_users.csv\")\n",
+    "path = \"C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/csv/\"\n",
+    "disinform = pd.read_csv(path + \"disinformation_users.csv\")\n",
     "disinform"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### CCDH and Total tweets comparison\n",
-    "<a id=\"comparison\"/>"
    ]
   },
   {
@@ -872,12 +867,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### New file\n",
+    "<a id=\"new\"/>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ccdh_tweets = pd.read_csv(\"C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/large_files/disinformation_tweets.csv\")"
+    "path = \"C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/large_files/\"\n",
+    "ccdh_tweets = pd.read_csv(path + \"disinformation_tweets.csv\")"
    ]
   },
   {
@@ -1335,7 +1339,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### New URLs"
+    "### New URLs\n",
+    "<a id=\"new_urls\"/>"
    ]
   },
   {
@@ -5172,47 +5177,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import botometer\n",
-    "import json\n",
-    "import tweepy\n",
-    "file_config = open('config.json',)\n",
-    "data = json.load(file_config)\n",
-    "\n",
-    "rapidapi_key = data[\"key_rapidapi\"]\n",
-    "twitter_app_auth = {\n",
-    "    'consumer_key': data[\"consumer_key\"],\n",
-    "    'consumer_secret': data[\"consumer_secret\"],\n",
-    "    'access_token': data[\"access_token\"],\n",
-    "    'access_token_secret': data[\"access_token_secret\"]\n",
-    "  }\n",
-    "bom = botometer.Botometer(wait_on_ratelimit=True,\n",
-    "                          rapidapi_key=rapidapi_key,\n",
-    "                          **twitter_app_auth)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "result = []\n",
-    "for i in range(len(retweet_name)//2):\n",
-    "    username = \"@\" + retweet_name.keys()[i]\n",
-    "    try:\n",
-    "        score = bom.check_account(username)\n",
-    "        print(f\"scored {i}, {username}\")\n",
-    "        result.append(score)\n",
-    "    except tweepy.TweepError as e:\n",
-    "        print(e)\n",
-    "        print('Account %s'%username)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
