--- a/notebook/Bot_Scored.ipynb
+++ b/notebook/Bot_Scored.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
     "import plotly.express as px\n",
     "import tweets_utils\n",
     "import importlib\n",
-    "\n",
+    "from collections import Counter\n",
     "%autosave 3600"
    ]
   },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,21 +330,114 @@
     "d_retweet_len = 0\n",
     "d_reply_len = 0\n",
     "\n",
-    "cols_tweets = [u'user_screen_name',u'user_id', u'created_at', \n",
-    "               u'urls', u\"rt_created_at\", u\"rt_user_id\", \n",
-    "               u\"rt_user_screen_name\", u'in_reply_to_user_id', \n",
-    "               u'in_reply_to_screen_name', u'in_reply_to_status_id']\n",
+    "cols_tweets = [u'user_screen_name', u'created_at', u'coordinates', u'lang',\n",
+    "        u'rt_user_screen_name', u'rt_created_at', u'rt_coordinates', u'rt_lang']\n",
+    "\n",
+    "name = []\n",
+    "data = []\n",
+    "coord = []\n",
+    "lang = []\n",
+    "\n",
+    "# cols_tweets = [u'user_screen_name',u'user_id', u'created_at', \n",
+    "#                u'urls', u\"rt_created_at\", u\"rt_user_id\", \n",
+    "#                u\"rt_user_screen_name\", u'in_reply_to_user_id', \n",
+    "#                u'in_reply_to_screen_name', u'in_reply_to_status_id']\n",
     "\n",
     "files_tweets = glob.glob(\"F:/COVID-19-Tweets/*/tweets.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 80,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading file: F:/COVID-19-Tweets\\2020-01\\tweets.csv\n",
+      "Processing chunk 1\n",
+      "Processing chunk 2\n",
+      "Processing chunk 3\n",
+      "Processing chunk 4\n",
+      "Processing chunk 5\n",
+      "Mese numero 1\n",
+      "Reading file: F:/COVID-19-Tweets\\2020-02\\tweets.csv\n",
+      "Processing chunk 1\n",
+      "Processing chunk 2\n",
+      "Processing chunk 3\n",
+      "Processing chunk 4\n",
+      "Processing chunk 5\n",
+      "Processing chunk 6\n",
+      "Processing chunk 7\n",
+      "Processing chunk 8\n",
+      "Processing chunk 9\n",
+      "Processing chunk 10\n",
+      "Processing chunk 11\n",
+      "Processing chunk 12\n",
+      "Mese numero 2\n",
+      "Reading file: F:/COVID-19-Tweets\\2020-03\\tweets.csv\n",
+      "Processing chunk 1\n",
+      "Processing chunk 2\n",
+      "Processing chunk 3\n",
+      "Processing chunk 4\n",
+      "Processing chunk 5\n",
+      "Processing chunk 6\n",
+      "Processing chunk 7\n",
+      "Processing chunk 8\n",
+      "Processing chunk 9\n",
+      "Processing chunk 10\n",
+      "Processing chunk 11\n",
+      "Processing chunk 12\n",
+      "Processing chunk 13\n",
+      "Processing chunk 14\n",
+      "Processing chunk 15\n",
+      "Mese numero 3\n",
+      "Reading file: F:/COVID-19-Tweets\\2020-04\\tweets.csv\n",
+      "Processing chunk 1\n",
+      "Processing chunk 2\n",
+      "Processing chunk 3\n",
+      "Processing chunk 4\n",
+      "Processing chunk 5\n",
+      "Processing chunk 6\n",
+      "Processing chunk 7\n",
+      "Processing chunk 8\n",
+      "Processing chunk 9\n",
+      "Processing chunk 10\n",
+      "Processing chunk 11\n",
+      "Processing chunk 12\n",
+      "Processing chunk 13\n",
+      "Mese numero 4\n",
+      "Reading file: F:/COVID-19-Tweets\\2020-05\\tweets.csv\n",
+      "Processing chunk 1\n",
+      "Processing chunk 2\n",
+      "Processing chunk 3\n",
+      "Processing chunk 4\n"
+     ]
+    },
+    {
+     "ename": "ParserError",
+     "evalue": "Error tokenizing data. C error: Calling read(nbytes) on source failed. Try engine='python'.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mParserError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-80-3191aa95902a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mfilename\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfiles_tweets\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"Reading file: {filename}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     \u001b[0mresult\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtweets_utils\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprocess_all_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcols_tweets\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbots\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"user\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m     \u001b[0mlista\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mresult\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0mj\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mj\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Desktop\\Supsi\\Git\\BachelorProject\\notebook\\tweets_utils.py\u001b[0m in \u001b[0;36mprocess_all_data\u001b[1;34m(filename, cols, flag, list_name, chunksize, workers)\u001b[0m\n\u001b[0;32m    217\u001b[0m             \u001b[0mi\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    218\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 219\u001b[1;33m             \u001b[0mchunk\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchunks\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    220\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    221\u001b[0m             \u001b[0mchunk\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\DataScience\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36m__next__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1032\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__next__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1033\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1034\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_chunk\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1035\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1036\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\DataScience\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36mget_chunk\u001b[1;34m(self, size)\u001b[0m\n\u001b[0;32m   1082\u001b[0m                 \u001b[1;32mraise\u001b[0m \u001b[0mStopIteration\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1083\u001b[0m             \u001b[0msize\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msize\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnrows\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_currow\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1084\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msize\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1085\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1086\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__enter__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\DataScience\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36mread\u001b[1;34m(self, nrows)\u001b[0m\n\u001b[0;32m   1055\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1056\u001b[0m         \u001b[0mnrows\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvalidate_integer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"nrows\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1057\u001b[1;33m         \u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcol_dict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1058\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1059\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mindex\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\DataScience\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36mread\u001b[1;34m(self, nrows)\u001b[0m\n\u001b[0;32m   2059\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2060\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2061\u001b[1;33m             \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_reader\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2062\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2063\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_first_chunk\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader.read\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._read_rows\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._tokenize_rows\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.raise_parser_error\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mParserError\u001b[0m: Error tokenizing data. C error: Calling read(nbytes) on source failed. Try engine='python'."
+     ]
+    }
+   ],
    "source": [
     "importlib.reload(tweets_utils)\n",
     "start_time = time.perf_counter()\n",
@@ -356,30 +449,108 @@
     "    j = j + 1\n",
     "    print(f\"Mese numero {j}\")\n",
     "    for i in range(len(lista)):\n",
-    "        #original post\n",
-    "        tweet_name.extend(lista[i][\"original_names\"])\n",
-    "        tweet_id.extend(lista[i][\"original_ids\"])\n",
-    "        link.extend(lista[i][\"links\"])\n",
+    "#        #original post\n",
+    "#         tweet_name.extend(lista[i][\"original_names\"])\n",
+    "#         tweet_id.extend(lista[i][\"original_ids\"])\n",
+    "#         link.extend(lista[i][\"links\"])\n",
     "#         #user who retweet\n",
-    "        retweet_name.extend(lista[i][\"retweet_users\"])\n",
-    "        retweet_id.extend(lista[i][\"retweet_ids\"])\n",
+    "#         retweet_name.extend(lista[i][\"retweet_users\"])\n",
+    "#         retweet_id.extend(lista[i][\"retweet_ids\"])\n",
     "#         #user retweeted\n",
-    "        retweeted_name.extend(lista[i][\"retweeted_users\"])\n",
-    "        retweeted_id.extend(lista[i][\"retweeted_ids\"])\n",
-    "        rt_link.extend(lista[i][\"rt_link\"])\n",
+    "#         retweeted_name.extend(lista[i][\"retweeted_users\"])\n",
+    "#         retweeted_id.extend(lista[i][\"retweeted_ids\"])\n",
+    "#         rt_link.extend(lista[i][\"rt_link\"])\n",
+    "#        #len\n",
+    "#         total_len = total_len + lista[i][\"total_len\"]\n",
+    "#         original_len = original_len + lista[i][\"original_len\"]\n",
+    "#         retweet_len = retweet_len + lista[i][\"retweet_len\"]\n",
+    "#         reply_len = reply_len + lista[i][\"reply_len\"]\n",
+    "#         d_total_len = d_total_len + lista[i][\"d_total_len\"]\n",
+    "#         d_original_len = d_original_len + lista[i][\"d_original_len\"]\n",
+    "#         d_retweet_len = d_retweet_len + lista[i][\"d_retweet_len\"]\n",
+    "#         d_reply_len = d_reply_len + lista[i][\"d_reply_len\"]\n",
+    "        name.extend(lista[i][\"name\"])\n",
+    "        data.extend(lista[i][\"data\"])\n",
+    "        coord.extend(lista[i][\"coord\"])\n",
+    "        lang.extend(lista[i][\"lang\"])\n",
     "\n",
-    "        #len\n",
-    "        total_len = total_len + lista[i][\"total_len\"]\n",
-    "        original_len = original_len + lista[i][\"original_len\"]\n",
-    "        retweet_len = retweet_len + lista[i][\"retweet_len\"]\n",
-    "        reply_len = reply_len + lista[i][\"reply_len\"]\n",
-    "        d_total_len = d_total_len + lista[i][\"d_total_len\"]\n",
-    "        d_original_len = d_original_len + lista[i][\"d_original_len\"]\n",
-    "        d_retweet_len = d_retweet_len + lista[i][\"d_retweet_len\"]\n",
-    "        d_reply_len = d_reply_len + lista[i][\"d_reply_len\"]\n",
     "\n",
     "stop_time = time.perf_counter()\n",
     "print(\"Time: \",stop_time-start_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "date = []\n",
+    "for i in data:\n",
+    "    date.append(tweets_utils.process_datetime(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_pop = []\n",
+    "for i in range(len(date)):\n",
+    "    if(\"2018\" in date[i]):\n",
+    "        print(i)\n",
+    "        to_pop.append(i)\n",
+    "to_pop\n",
+    "for i in to_pop:\n",
+    "    date.pop(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(date, columns=['date'])\n",
+    "days_count = df['date'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.histogram(df, x=\"date\")\n",
+    "fig.update_layout(\n",
+    "    title_text='Daily tweets', # title of plot\n",
+    "    xaxis_title_text='Tweet', # xaxis label\n",
+    "    yaxis_title_text='Count', # yaxis label\n",
+    "    bargap=0.1, # gap between bars of adjacent location coordinates\n",
+    "    bargroupgap=0.1 # gap between bars of the same location coordinates\n",
+    ")\n",
+    "fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "97361"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(date)"
    ]
   },
   {
