--- a/notebook/Disinform_CCDH.ipynb
+++ b/notebook/Disinform_CCDH.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "7     kevdjenkins1     active"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "[825 rows x 2 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
        "11     kevdjenkins1     active"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +487,7 @@
     "# d_retweet_len = 0\n",
     "# d_reply_len = 0\n",
     "\n",
-    "cols_tweets = [u'user_screen_name',u'user_id', u'created_at', \n",
+    "cols_tweets = [u'id', u'user_screen_name',u'user_id', u'created_at', \n",
     "               u'urls', u\"rt_created_at\", u\"rt_user_id\", \n",
     "               u\"rt_user_screen_name\", u'in_reply_to_user_id', \n",
     "               u'in_reply_to_screen_name', u'in_reply_to_status_id']\n",
@@ -497,13 +497,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>created_at</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>user_screen_name</th>\n",
+       "      <th>in_reply_to_status_id</th>\n",
+       "      <th>in_reply_to_user_id</th>\n",
+       "      <th>in_reply_to_screen_name</th>\n",
+       "      <th>rt_created_at</th>\n",
+       "      <th>rt_user_id</th>\n",
+       "      <th>rt_user_screen_name</th>\n",
+       "      <th>urls</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1219752899636613121</td>\n",
+       "      <td>Tue Jan 21 22:45:27 +0000 2020</td>\n",
+       "      <td>1110906564158869505</td>\n",
+       "      <td>Huerconetzin</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Tue Jan 21 19:09:49 +0000 2020</td>\n",
+       "      <td>1.865051e+07</td>\n",
+       "      <td>AnneKPIX</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1219768733310291969</td>\n",
+       "      <td>Tue Jan 21 23:48:22 +0000 2020</td>\n",
+       "      <td>1214557289606242304</td>\n",
+       "      <td>JustAnotherAme4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Tue Jan 21 21:33:16 +0000 2020</td>\n",
+       "      <td>2.097571e+06</td>\n",
+       "      <td>cnni</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1219768903116607488</td>\n",
+       "      <td>Tue Jan 21 23:49:03 +0000 2020</td>\n",
+       "      <td>426033838</td>\n",
+       "      <td>HHSRegion8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Tue Jan 21 20:57:06 +0000 2020</td>\n",
+       "      <td>1.465700e+08</td>\n",
+       "      <td>CDCgov</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1219753863940648965</td>\n",
+       "      <td>Tue Jan 21 22:49:17 +0000 2020</td>\n",
+       "      <td>2252416118</td>\n",
+       "      <td>Paxman42</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Tue Jan 21 22:20:07 +0000 2020</td>\n",
+       "      <td>7.865932e+17</td>\n",
+       "      <td>OurWarOnCancer</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1219755288988798981</td>\n",
+       "      <td>Tue Jan 21 22:54:57 +0000 2020</td>\n",
+       "      <td>738000529775697920</td>\n",
+       "      <td>beerhowell</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Tue Jan 21 18:37:41 +0000 2020</td>\n",
+       "      <td>8.070950e+05</td>\n",
+       "      <td>nytimes</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    id                      created_at              user_id  \\\n",
+       "0  1219752899636613121  Tue Jan 21 22:45:27 +0000 2020  1110906564158869505   \n",
+       "1  1219768733310291969  Tue Jan 21 23:48:22 +0000 2020  1214557289606242304   \n",
+       "2  1219768903116607488  Tue Jan 21 23:49:03 +0000 2020            426033838   \n",
+       "3  1219753863940648965  Tue Jan 21 22:49:17 +0000 2020           2252416118   \n",
+       "4  1219755288988798981  Tue Jan 21 22:54:57 +0000 2020   738000529775697920   \n",
+       "\n",
+       "  user_screen_name  in_reply_to_status_id  in_reply_to_user_id  \\\n",
+       "0     Huerconetzin                    NaN                  NaN   \n",
+       "1  JustAnotherAme4                    NaN                  NaN   \n",
+       "2       HHSRegion8                    NaN                  NaN   \n",
+       "3         Paxman42                    NaN                  NaN   \n",
+       "4       beerhowell                    NaN                  NaN   \n",
+       "\n",
+       "   in_reply_to_screen_name                   rt_created_at    rt_user_id  \\\n",
+       "0                      NaN  Tue Jan 21 19:09:49 +0000 2020  1.865051e+07   \n",
+       "1                      NaN  Tue Jan 21 21:33:16 +0000 2020  2.097571e+06   \n",
+       "2                      NaN  Tue Jan 21 20:57:06 +0000 2020  1.465700e+08   \n",
+       "3                      NaN  Tue Jan 21 22:20:07 +0000 2020  7.865932e+17   \n",
+       "4                      NaN  Tue Jan 21 18:37:41 +0000 2020  8.070950e+05   \n",
+       "\n",
+       "  rt_user_screen_name urls  \n",
+       "0            AnneKPIX   []  \n",
+       "1                cnni   []  \n",
+       "2              CDCgov   []  \n",
+       "3      OurWarOnCancer   []  \n",
+       "4             nytimes   []  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "for chunk in pd.read_csv(files_tweets[0], chunksize=10, lineterminator = '\\n'):\n",
+    "for chunk in pd.read_csv(files_tweets[0], usecols=cols_tweets, chunksize=10, lineterminator = '\\n'):\n",
     "    break\n",
-    "# chunk.info()"
+    "chunk.head()"
    ]
   },
   {
@@ -614,6 +758,7 @@
     "#     y = 0\n",
     "    for i in range(len(lista)):\n",
     "        #original post\n",
+    "        id_tweet.extend(lista[i][\"id\"])\n",
     "        tweet_name.extend(lista[i][\"original_names\"])\n",
     "        tweet_id.extend(lista[i][\"original_ids\"])\n",
     "        link.extend(lista[i][\"links\"])\n",
@@ -624,12 +769,12 @@
     "        retweeted_name.extend(lista[i][\"retweeted_users\"])\n",
     "        retweeted_id.extend(lista[i][\"retweeted_ids\"])\n",
     "        rt_link.extend(lista[i][\"rt_link\"])\n",
-    "# #         #user who reply\n",
-    "#         reply_id.extend(lista[i][\"reply_ids\"])\n",
-    "#         reply_name.extend(lista[i][\"reply_users\"])\n",
-    "# #         #use who get reply\n",
-    "#         replied_id.extend(lista[i][\"replied_ids\"])\n",
-    "#         replied_name.extend(lista[i][\"replied_users\"])\n",
+    "#         #user who reply\n",
+    "        reply_id.extend(lista[i][\"reply_ids\"])\n",
+    "        reply_name.extend(lista[i][\"reply_users\"])\n",
+    "#         #use who get reply\n",
+    "        replied_id.extend(lista[i][\"replied_ids\"])\n",
+    "        replied_name.extend(lista[i][\"replied_users\"])\n",
     "#         #len\n",
     "#         total_len = total_len + lista[i][\"total_len\"]\n",
     "#         original_len = original_len + lista[i][\"original_len\"]\n",
@@ -669,8 +814,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_rt_ccdh = pd.DataFrame(list(zip(retweet_id, retweet_name, retweeted_id, retweeted_name, rt_link)), \n",
-    "                          columns =['id','name', 'rt_id','rt_name', 'rt_url'])"
+    "df_rt_ccdh = pd.DataFrame(list(zip(id_tweet, retweet_id, retweet_name, retweeted_id, retweeted_name, \n",
+    "      rt_link, replied_id, replied_name)), \n",
+    "      columns =['id', 'user_id', 'name', 'rt_id','rt_name', 'rt_url', 'rp_id', 'rp_name'])"
    ]
   },
   {
@@ -2644,28 +2790,28 @@
    "outputs": [],
    "source": [
     "credib = []\n",
-    "credib.append(\"low\") #petitions.whitehouse.gov\n",
-    "credib.append(\"low\") #NaturalNews.com\n",
-    "credib.append(\"high\") #heritage.org\n",
-    "credib.append(\"high\") #tampabay.com\n",
-    "credib.append(\"low\") #unherd.com\n",
-    "credib.append(\"low\") #AskDrButtar.com\n",
-    "credib.append(\"high\") #wsws.org\n",
-    "credib.append(\"low\") #n5ti.com\n",
-    "credib.append(\"low\") #theepochtimes.com\n",
-    "credib.append(\"high\") #covipass.com\n",
-    "credib.append(\"low\") #fort-russ.com\n",
-    "credib.append(\"high\") #fiercepharma.com\n",
-    "credib.append(\"low\") #tenthamendmentcenter.com\n",
-    "credib.append(\"low\") #vigiliae.org\n",
-    "credib.append(\"low\") #sun-sentinel.com\n",
-    "credib.append(\"high\") #clinicaltrials.gov\n",
-    "credib.append(\"low\") #Reason.com\n",
-    "credib.append(\"low\") #childrenshealthdefense.org\n",
-    "credib.append(\"low\") #AdvancedMedicineConference.com\n",
-    "credib.append(\"high\") #aol.com\n",
-    "credib.append(\"low\") #trendingpolitics.com\n",
-    "credib.append(\"low\") #charityauctionstoday.com"
+    "credib.append(\"low\") #petitions.whitehouse.gov --> è una petizione\n",
+    "credib.append(\"low\") #NaturalNews.com --> CONSPIRACY-PSEUDOSCIENCE\n",
+    "credib.append(\"high\") #heritage.org --> medium, Pseudoscience\n",
+    "credib.append(\"high\") #tampabay.com --> LEFT-CENTER BIAS\n",
+    "credib.append(\"low\") #unherd.com --> online social media \n",
+    "credib.append(\"low\") #AskDrButtar.com --> Medico osteopatico americano\n",
+    "credib.append(\"high\") #wsws.org --> LEFT BIAS\n",
+    "credib.append(\"low\") #n5ti.com --> news websites operated by a team of volunteers for Ghana\n",
+    "credib.append(\"low\") #theepochtimes.com --> QUESTIONABLE SOURCE\n",
+    "credib.append(\"high\") #covipass.com --> provider trasferimento informazioni sanitarie personali \n",
+    "credib.append(\"low\") #fort-russ.com --> LEFT-CENTER BIAS (high, to modify) \n",
+    "credib.append(\"high\") #fiercepharma.com --> No data\n",
+    "credib.append(\"low\") #tenthamendmentcenter.com --> QUESTIONABLE SOURCE\n",
+    "credib.append(\"low\") #vigiliae.org --> not found\n",
+    "credib.append(\"low\") #sun-sentinel.com --> (high, to modify)\n",
+    "credib.append(\"high\") #clinicaltrials.gov -->  registro di studi clinici\n",
+    "credib.append(\"low\") #Reason.com --> RIGHT-CENTER BIAS (high, to modify)\n",
+    "credib.append(\"low\") #childrenshealthdefense.org --> CONSPIRACY-PSEUDOSCIENCE\n",
+    "credib.append(\"low\") #AdvancedMedicineConference.com --> conference\n",
+    "credib.append(\"high\") #aol.com --> LEFT-CENTER BIAS\n",
+    "credib.append(\"low\") #trendingpolitics.com --> QUESTIONABLE SOURCE\n",
+    "credib.append(\"low\") #charityauctionstoday.com --> online auctions"
    ]
   },
   {
