Start hashtag investiagion ccdh

--- a/notebook/Retweet_Network.ipynb
+++ b/notebook/Retweet_Network.ipynb
@@ -25,13 +25,12 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import plotly.express as px\n",
     "import matplotlib.pyplot as plt\n",
     "from time import strptime\n",
     "import datetime\n",
     "from datetime import datetime\n",
-    "import math\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
     "import time\n",
     "import csv\n",
     "import glob\n",
@@ -39,18 +38,17 @@
     "import importlib\n",
     "import tweets_utils\n",
     "import json\n",
-    "import networkx as nx\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import re\n",
-    "from operator import itemgetter\n",
-    "import matplotlib.cm as mcm\n",
-    "import community\n",
-    "from community import community_louvain as cm\n",
-    "import leidenalg as la\n",
-    "import igraph as ig\n",
-    "from cdlib import algorithms\n",
-    "import plotly.express as px\n",
+    "# import networkx as nx\n",
+    "# import seaborn as sns\n",
+    "# import re\n",
+    "# from operator import itemgetter\n",
+    "# import matplotlib.cm as mcm\n",
+    "# import community\n",
+    "# from community import community_louvain as cm\n",
+    "# import leidenalg as la\n",
+    "# import igraph as ig\n",
+    "# from cdlib import algorithms\n",
+    "warnings.filterwarnings('ignore')\n",
     "%autosave 3600"
    ]
   },
@@ -58,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Network"
+    "# Network Script"
    ]
   },
   {
@@ -177,6 +175,103 @@
     "partition\n",
     "#da ritornare"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Network"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Nx info\n",
+    "<p>\n",
+    "    \n",
+    "    Type: DiGraph\n",
+    "    Number of nodes: 12513502\n",
+    "    Number of edges: 40027282\n",
+    "    Average in degree:   3.1987\n",
+    "    Average out degree:   3.1987\n",
+    "    \n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/large_files/rt_network\\\\degree.json',\n",
+       " 'C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/large_files/rt_network\\\\in_degree.json',\n",
+       " 'C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/large_files/rt_network\\\\out_degree.json']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path_degrees = glob.glob(\"C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/large_files/rt_network/*degree*.json\")\n",
+    "path_degrees"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/large_files/rt_network\\\\leiden_communities.json',\n",
+       " 'C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/large_files/rt_network\\\\louvain_communities.json']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path_communities = glob.glob(\"C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/large_files/rt_network/*communities*.json\")\n",
+    "path_communities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time:  24.922956400000004\n"
+     ]
+    }
+   ],
+   "source": [
+    "start_time = time.perf_counter()\n",
+    "file = open (path_degrees[0],)\n",
+    "data = json.loads(file.read())\n",
+    "file.close()\n",
+    "stop_time = time.perf_counter()\n",
+    "print(\"Time: \",stop_time-start_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
