Create botscore distribution and retweet netwrok communities

--- a/notebook/Bot_Scored.ipynb
+++ b/notebook/Bot_Scored.ipynb
@@ -46,7 +46,9 @@
     "# Indice\n",
     "- [Utils](#utils)\n",
     "- [Collecting data](#collecting)\n",
+    "- [Data studies](#dates)\n",
     "- [Stats](#stats)\n",
+    "- [Hashtags](#hashtags)\n",
     "- [Process domain](#domain)\n",
     "- [Classify credibility](#credibility)"
    ]
@@ -306,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +316,11 @@
     "               u'rt_user_screen_name', u'rt_created_at', u'in_reply_to_status_id',\n",
     "               u'hashtags', u'urls', u'rt_lang']\n",
     "df_user = pd.DataFrame()\n",
-    "\n",
+    "total_len = 0\n",
+    "original_len = 0\n",
+    "retweet_len = 0\n",
+    "reply_len = 0\n",
+    "result = []\n",
     "# cols_tweets = [u'user_screen_name',u'user_id', u'created_at', \n",
     "#                u'urls', u\"rt_created_at\", u\"rt_user_id\", \n",
     "#                u\"rt_user_screen_name\", u'in_reply_to_user_id', \n",
@@ -325,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {
     "scrolled": false
    },
@@ -413,7 +419,7 @@
       "Processing chunk 23\n",
       "Processing chunk 24\n",
       "Mese numero 5\n",
-      "Time:  2257.5363807999997\n"
+      "Time:  1865.3001187\n"
      ]
     }
    ],
@@ -430,15 +436,39 @@
     "    for i in range(len(lista)):\n",
     "        df_user = df_user.append(lista[i][\"df\"])\n",
     "        df_user = df_user.append(lista[i][\"df_rt\"])\n",
-    "\n",
-    "\n",
+    "        total_len = total_len + lista[i][\"len_total\"]\n",
+    "        original_len = original_len + lista[i][\"len_original\"] \n",
+    "        retweet_len = retweet_len + lista[i][\"len_retweet\"]\n",
+    "        reply_len = reply_len + lista[i][\"len_reply\"]\n",
     "stop_time = time.perf_counter()\n",
     "print(\"Time: \",stop_time-start_time)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "df_user = df_user.reset_index(drop=True)\n",
+    "df_user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = glob.glob(\"C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/large_files/\")\n",
+    "df_user = pd.read_csv(path[0] + \"bots_study.csv\", usecols=cols_tweets, low_memory=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -680,19 +710,18 @@
        "[1452606 rows x 9 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_user = df_user.reset_index(drop=True)\n",
     "df_user"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,6 +740,14 @@
     "d_original_len = len(original)\n",
     "d_retweet_len = len(retweet)\n",
     "d_reply_len = len(reply)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data studies\n",
+    "<a id=\"dates\"/>"
    ]
   },
   {
@@ -797,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -889,17 +926,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Process domain\n",
-    "<a id=\"domain\"/>"
+    "### Hashtags\n",
+    "<a id=\"hashtags\"/>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_user.to_csv(\"C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/large_files/bots_study.csv\", index=False)"
+    "df_hashtags = df_user[df_user[\"hashtags\"] != \"[]\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_hashtags = [tweets_utils.hashtag_normalize(x) for x in df_hashtags[\"hashtags\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_hashtags = pd.Series(lista_hashtags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val = lista_hashtags.value_counts().sort_values(ascending=False)\n",
+    "fig = plt.figure(figsize=(14, 8))\n",
+    "ax = val[:30].plot(kind='barh', color='steelblue', fig=(14,14)) #orange #lightseagreen\n",
+    "ax.set_title('Number of HASHTAGS per bot (top 30)', fontsize=15)\n",
+    "ax.invert_yaxis()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(lista_hashtags)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Process domain\n",
+    "<a id=\"domain\"/>"
    ]
   },
   {
