Investigation on new good users

--- a/notebook/Retweet_Network.ipynb
+++ b/notebook/Retweet_Network.ipynb
@@ -597,7 +597,9 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -621,6 +623,24 @@
     "ax.invert_yaxis()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- interazioni con le altre community\n",
+    "- se i dozen ne fanno parte\n",
+    "- caratterizzazione community\n",
+    "- prendi rt di un gruppo e vedi quanti hanno come altro nodo della rete un gruppo all'interno della propria community\n",
+    "    - prime 5, caratterizza (community seguaci, community alto verified, ...)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
